--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,10 @@
 Package: microbialpanels
-Title: What the Package Does (One Line, Title Case)
+Title: Retrieve Lists of Microbes Related in Various Ways
 Version: 0.0.0.9000
 Authors@R: 
     person("Sam", "El-Kamand", , "selkamand@ccia.org.au", role = c("aut", "cre"),
            comment = c(ORCID = "https://orcid.org/0000-0003-2270-8088"))
-Description: What the package does (one paragraph).
+Description: Provides collections of microbes related by ecological niche, clinical relevance, evolutionary distance, and more.
 License: MIT + file LICENSE
 Imports: 
     cli,
